--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
-            android:src="@drawable/ic_header"
+            android:src="@drawable/home_header"
             app:layout_constraintBottom_toTopOf="@id/login_txt"
             app:layout_constraintTop_toTopOf="parent" />
 
