--- a/app/src/main/res/menu/bottom_nav_home.xml
+++ b/app/src/main/res/menu/bottom_nav_home.xml
@@ -2,10 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/homeFragment"
-        android:icon="@drawable/ic_recent_chats"
+        android:icon="@drawable/home_selector"
         android:title="@string/recent_calls" />
     <item
+        android:id="@+id/groupFragment"
+        android:icon="@drawable/group_selector"
+        android:title="@string/group" />
+    <item
         android:id="@+id/settingsFragment"
-        android:icon="@drawable/ic_settings"
+        android:icon="@drawable/user_selector"
         android:title="@string/settings" />
 </menu>
