--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -20,76 +20,102 @@
         tools:context=".presentation.settings.SettingsFragment">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@drawable/img_background_profile"
+            android:layout_width="600dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-150dp"
+            android:background="@drawable/ic_setting_header"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-        <LinearLayout
-            android:id="@+id/llInformation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background_rectangle_white"
-            android:elevation="@dimen/spacing_large"
-
-            android:gravity="center|top"
-            android:orientation="vertical"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgAvt"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:src="@drawable/ic_avatar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2">
+            app:layout_constraintVertical_bias="0.3" />
+
+        <TextView
+            android:id="@+id/hello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/utm_avo"
+            android:text="Xin chào!"
+            android:textColor="@color/purple_main_color"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgAvt" />
+
+        <TextView
+            android:id="@+id/fullNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/utm_avo_bold"
+            android:text="Minh"
+            android:textColor="@color/purple_second_color"
+            android:textSize="45sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hello" />
+
+        <TextView
+            android:id="@+id/userNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/utm_avo_italic"
+            android:text="@minh"
+            android:textColor="@color/purple_third_color"
+            android:textSize="@dimen/text_large"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fullNameTxt" />
 
 
-            <ImageView
-                android:id="@+id/imgAvt"
-                android:layout_width="160dp"
-                android:layout_height="160dp"
-                android:layout_marginStart="@dimen/spacing_xxxlarge"
-                android:layout_marginLeft="@dimen/spacing_xxxlarge"
-                android:layout_marginTop="@dimen/spacing_xxxlarge"
-                android:layout_marginEnd="@dimen/spacing_xxxlarge"
-                android:src="@drawable/ic_baseline_account_circle_24"
-                android:padding="@dimen/spacing_large"
-                android:clickable="true"
-                android:focusable="true" />
+<!--        <TextView-->
+<!--            android:id="@+id/tvNewGroup"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/background_rectangle_black_bot"-->
+<!--            android:drawableLeft="@drawable/ic_group"-->
+<!--            android:gravity="center"-->
+<!--            android:onClick="@{()->viewModel.navigateToNewGroup()}"-->
+<!--            android:padding="@dimen/spacing_large"-->
+<!--            android:text="New group"-->
+<!--            android:textColor="@color/white" -->
+<!--            app:layout_constraintTop_toBottomOf="@id/userNameTxt"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
 
-            <TextView
-                android:id="@+id/fullNameTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/spacing_medium"
-                android:text="Minh"
-                android:textSize="@dimen/text_large"
-                android:textStyle="bold" />
+        <!--        <TextView-->
+        <!--            android:id="@+id/testTxt"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:text="TEST"-->
+        <!--            android:textSize="20sp"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/llInformation" />-->
 
-            <TextView
-                android:id="@+id/userNameTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/spacing_medium"
-                android:text="@minh"
-                android:textSize="@dimen/text_large"
-                android:textStyle="bold" />
-
-
-            <TextView
-                android:id="@+id/tvNewGroup"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/background_rectangle_black_bot"
-                android:drawableLeft="@drawable/ic_group"
-                android:gravity="center"
-                android:onClick="@{()->viewModel.navigateToNewGroup()}"
-                android:padding="@dimen/spacing_large"
-                android:text="New group"
-                android:textColor="@color/white" />
-
-
-        </LinearLayout>
+        <!--        <Button-->
+        <!--            android:id="@+id/testBtn"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="Update"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/testTxt" />-->
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/login_btn"
