--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.vn.chat_app_client.presentation.chats.ChatViewModel" />
@@ -15,104 +16,140 @@
         android:layout_height="match_parent"
         tools:context=".presentation.chats.ChatFragment">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/headerLayout"
+        <ImageView
+            android:id="@+id/header"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:elevation="20dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_chat_header"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            android:background="@color/purple_700">
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/back_btn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/ic_back"
+            app:layout_constraintBottom_toBottomOf="@id/header"
+            app:layout_constraintStart_toStartOf="@id/header"
+            app:layout_constraintTop_toTopOf="@id/header"
+            app:layout_constraintVertical_bias="0.3" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/back_btn"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:background="@drawable/ic_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="10dp"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/roomNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="Room chat"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@id/header"
+            app:layout_constraintLeft_toRightOf="@id/back_btn"
+            app:layout_constraintTop_toTopOf="@id/header"
+            app:layout_constraintVertical_bias="0.2" />
 
-            <TextView
-                android:id="@+id/roomNameTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/roomOnline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="Currenly online"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/utm_avo"
+            app:layout_constraintLeft_toRightOf="@id/dot"
+            app:layout_constraintTop_toBottomOf="@id/roomNameTxt" />
 
-            <ImageView
-                android:id="@+id/separator"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/custom_line"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/headerLayout"
-                tools:ignore="ContentDescription" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/dot"
+            android:layout_width="10dp "
+            android:layout_height="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/roomNameTxt"
+            app:layout_constraintLeft_toRightOf="@id/back_btn"
+            android:background="@drawable/ic_baseline_circle_24"/>
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/sendLayout"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            app:layout_constraintBottom_toTopOf="@id/footer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/headerLayout" />
+            app:layout_constraintTop_toBottomOf="@id/header" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/sendLayout"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:id="@+id/photoBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:background="@drawable/ic_baseline_add_photo_alternate_24"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toBottomOf="@id/searchBar"
+            app:layout_constraintLeft_toLeftOf="@id/searchBar"
+            app:layout_constraintTop_toTopOf="@id/searchBar" />
+
+        <ImageButton
+            android:id="@+id/sendBtn"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/ic_send_btn"
+            android:elevation="10dp"
+            android:textColor="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/searchBar"
+            app:layout_constraintEnd_toEndOf="@id/searchBar"
+            app:layout_constraintTop_toTopOf="@id/searchBar" />
+
+        <!--        <androidx.appcompat.widget.AppCompatButton-->
+        <!--            android:id="@+id/fileBtn"-->
+        <!--            android:layout_width="40dp"-->
+        <!--            android:layout_height="40dp"-->
+        <!--            android:background="@drawable/ic_send_file"-->
+        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--            app:layout_constraintStart_toEndOf="@id/photoBtn" />-->
+
+        <View
+            android:id="@+id/footer"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/photoBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/ic_send_photo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/fileBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/ic_send_file"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/photoBtn" />
+        <ImageView
+            android:id="@+id/searchBar"
+            android:layout_width="400dp"
+            android:layout_height="90dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/search_bar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/footer"
+            app:layout_constraintTop_toTopOf="@id/footer" />
 
-            <EditText
-                android:id="@+id/messageEdt"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginEnd="60dp"
-                android:hint="@string/message_here"
-                android:text="@={viewModel.messageText}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <EditText
+            android:id="@+id/messageEdt"
+            android:layout_width="0dp  "
+            android:layout_height="50dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginBottom="15dp"
+            android:text="@={viewModel.messageText}"
+            android:background="@android:color/transparent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/searchBar"
+            app:layout_constraintStart_toStartOf="@id/searchBar"
+            app:layout_constraintTop_toTopOf="@id/footer" />
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/sendBtn"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/bg_send_btn"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
