--- a/app/src/main/res/layout/other_text_message.xml
+++ b/app/src/main/res/layout/other_text_message.xml
@@ -12,8 +12,10 @@
         android:text="John Doe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:textSize="16sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
+        android:fontFamily="@font/utm_avo_bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="5dp"
@@ -21,13 +23,14 @@
 
     <TextView
         android:id="@+id/txtOtherMessage"
-        android:text="Hi, John's message"
+        android:text="Hi,John's message"
         android:background="@drawable/other_message_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="240dp"
         android:padding="15dp"
         android:textColor="#2B2B2B"
+        android:fontFamily="@font/utm_avo"
         android:layout_marginTop="4dp"
         android:layout_marginStart="10dp"
         app:layout_constraintTop_toBottomOf="@+id/txtOtherUser"
