--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -50,6 +50,9 @@
             app:destination="@id/chatFragment"
             app:popUpTo="@id/homeFragment"
             app:popUpToSaveState="true"/>
+        <action
+            android:id="@+id/action_homeFragment_to_groupFragment"
+            app:destination="@id/groupFragment" />
     </fragment>
     <fragment
         android:id="@+id/newGroupFragment"
@@ -58,6 +61,14 @@
         tools:layout="@layout/fragment_new_group">
         <action
             android:id="@+id/action_newGroupFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/groupFragment"
+        android:name="com.vn.chat_app_client.presentation.group.GroupFragment"
+        android:label="GroupFragment" >
+        <action
+            android:id="@+id/action_groupFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
     </fragment>
 </navigation>
