--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -49,7 +49,7 @@
             android:id="@+id/action_homeFragment_to_chatFragment"
             app:destination="@id/chatFragment"
             app:popUpTo="@id/homeFragment"
-            app:popUpToSaveState="true"/>
+            app:popUpToSaveState="true" />
         <action
             android:id="@+id/action_homeFragment_to_groupFragment"
             app:destination="@id/groupFragment" />
@@ -66,9 +66,13 @@
     <fragment
         android:id="@+id/groupFragment"
         android:name="com.vn.chat_app_client.presentation.group.GroupFragment"
-        android:label="GroupFragment" >
+        android:label="GroupFragment"
+        tools:layout="@layout/fragment_group">
         <action
             android:id="@+id/action_groupFragment_to_chatFragment"
             app:destination="@id/chatFragment" />
+        <action
+            android:id="@+id/action_groupFragment_to_newGroupFragment"
+            app:destination="@id/newGroupFragment" />
     </fragment>
 </navigation>
