--- a/app/src/main/res/drawable/background_rectangle_gray_border_black.xml
+++ b/app/src/main/res/drawable/background_rectangle_gray_border_black.xml
@@ -4,7 +4,7 @@
 
     <corners android:radius="@dimen/spacing_medium">
     </corners>
-    <solid android:color="@color/gray_light" />
+    <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
         android:color="@color/black" />
