--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -18,12 +18,14 @@
         android:background="@color/background_color"
         tools:context=".presentation.auth.AuthActivity">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/layout_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
             android:layout_marginTop="45dp"
-            android:src="@drawable/home_header"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/chat"
             app:layout_constraintBottom_toTopOf="@id/login_txt"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,25 +38,11 @@
             android:text="@string/login"
             android:textColor="@color/black"
             android:textSize="32sp"
-            app:layout_constraintBottom_toTopOf="@id/privacy_txt"
+            app:layout_constraintBottom_toTopOf="@id/phone_edit_txt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/layout_header" />
 
-        <TextView
-            android:id="@+id/privacy_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="72dp"
-            android:fontFamily="@font/roboto_slab"
-            android:gravity="center"
-            android:text="@string/privacy"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/phone_edit_txt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_txt" />
 
         <EditText
             android:id="@+id/phone_edit_txt"
@@ -62,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:background="@drawable/rounded_white"
-            android:drawableEnd="@drawable/ic_phone"
+            android:drawableEnd="@drawable/ic_account_black"
             android:fontFamily="@font/roboto_slab"
             android:hint="@string/username"
             android:importantForAutofill="no"
@@ -72,7 +60,7 @@
             app:layout_constraintBottom_toTopOf="@id/password_edit_txt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/privacy_txt"
+            app:layout_constraintTop_toBottomOf="@id/login_txt"
             tools:ignore="LabelFor,TextFields" />
 
         <EditText
