--- a/app/src/main/res/layout/my_photo_message.xml
+++ b/app/src/main/res/layout/my_photo_message.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="10dp"
         android:text="12:00 PM"
         android:textSize="10sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/utm_avo_italic"
         app:layout_constraintBottom_toBottomOf="@id/layoutMyPhoto"
         app:layout_constraintRight_toLeftOf="@id/layoutMyPhoto" />
 
