--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -73,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/utm_avo_italic"
-            android:text="@minh"
+            android:text="Huy Pham"
             android:textColor="@color/purple_third_color"
             android:textSize="@dimen/text_large"
             android:textStyle="bold"
@@ -82,20 +82,20 @@
             app:layout_constraintTop_toBottomOf="@id/fullNameTxt" />
 
 
-<!--        <TextView-->
-<!--            android:id="@+id/tvNewGroup"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@drawable/background_rectangle_black_bot"-->
-<!--            android:drawableLeft="@drawable/ic_group"-->
-<!--            android:gravity="center"-->
-<!--            android:onClick="@{()->viewModel.navigateToNewGroup()}"-->
-<!--            android:padding="@dimen/spacing_large"-->
-<!--            android:text="New group"-->
-<!--            android:textColor="@color/white" -->
-<!--            app:layout_constraintTop_toBottomOf="@id/userNameTxt"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
+        <!--        <TextView-->
+        <!--            android:id="@+id/tvNewGroup"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:background="@drawable/background_rectangle_black_bot"-->
+        <!--            android:drawableLeft="@drawable/ic_group"-->
+        <!--            android:gravity="center"-->
+        <!--            android:onClick="@{()->viewModel.navigateToNewGroup()}"-->
+        <!--            android:padding="@dimen/spacing_large"-->
+        <!--            android:text="New group"-->
+        <!--            android:textColor="@color/white" -->
+        <!--            app:layout_constraintTop_toBottomOf="@id/userNameTxt"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintEnd_toEndOf="parent"/>-->
 
         <!--        <TextView-->
         <!--            android:id="@+id/testTxt"-->
@@ -116,27 +116,6 @@
         <!--            app:layout_constraintEnd_toEndOf="parent"-->
         <!--            app:layout_constraintStart_toStartOf="parent"-->
         <!--            app:layout_constraintTop_toBottomOf="@id/testTxt" />-->
-
-        <TextView
-            android:id="@+id/testTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/llInformation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="TEST"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            />
-
-        <Button
-            android:id="@+id/testBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Update"
-            app:layout_constraintTop_toBottomOf="@id/testTxt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/login_btn"
